--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -238,8 +238,23 @@ knitr::include_graphics("figures/bayesian/zmb-scatter.png")
 
 ## Model structure {#hierarchical-lgm-elgm}
 
-We have seen that in spatio-temporal statistics, observations have structure.
-Each observation should not necessarily be considered as arising from the same distribution as another.
+We have seen that in spatio-temporal statistics, observations are related to each other, and should not all be considered as IID.
+In this section, I will discuss ways in which these relationships can be encoded mathematically via the model structure.
+
+### Linear model
+
+A linear model is given by
+\begin{align*}
+y_i &\sim \mathcal{N}(\mu_i, \sigma), \\
+\mu_i &= \beta_0 + \sum_{l = 1}^{p} \beta_j z_{ji}, \\
+\{\beta_j\} &\sim p(\{\beta_j\}), \\
+\sigma &\sim p(\sigma).
+\end{align*}
+
+### Generalised linear model
+
+A generalised linear model (GLM) is given by.
+Things can then be removed from LGM, ELGM which are introduced here.
 
 ### Hierarchical models {#hierarchical}
 
@@ -249,27 +264,15 @@ Each observation should not necessarily be considered as arising from the same d
 knitr::include_graphics("figures/bayesian/hierarchical-structure.png")
 ```
 
-Some observations in data are natural to group together.
-For example, each individual $i = 1, \ldots, n$ in a study might be observed $m_i$ times (Figure \@ref(fig:hierarchical-structure)).
-Observations $y_{i1}, \ldots y_{im_i}$ of the same individual are grouped together.
-These observations are more likely to be similar than observations of different individuals.
-We might also group observations by spatio-temporal location.
+Group structure is a simple, binary way in which observations are related.
+Figure \@ref(fig:hierarchical-structure) illustrates a case in which each individual in a study is observed some number of times, and observations of the same individual are grouped together.
+Observations from the same indivudal are more likely to be similar than observations of different individuals.
+Groups can also be nested within other groups, as well as crossed with each other.
 
-Bayesian hierarchical or multilevel models allow for natural handling of group structure in data, even for complex nested or crossed structures.
-In a three-stage hierarchical model, we partition the parameters so that $\boldsymbol{\mathbf{\phi}} = (\mathbf{x}, \boldsymbol{\mathbf{\theta}})$.
-I refer to $\mathbf{x} = (x_1, \ldots, x_n)$ as the latent field, and $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_m)$ as the hyperparameters.
-The model for data $\mathbf{y}$ is then
-\begin{align}
-\mathbf{y} &\sim p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}), \\
-\mathbf{x} &\sim p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}), \\
-\boldsymbol{\mathbf{\theta}} &\sim p(\boldsymbol{\mathbf{\theta}}),
-\end{align}
-with posterior distribution proportional to $p(\mathbf{x}, \boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}) p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\boldsymbol{\mathbf{\theta}})$.
-
-Bayesian hierarchical models allow control over whether and how information is shared across groups.
+Consider three models for this data, each of which with a Gaussian likelihood:
 
 1. **Complete pooling**:
-In the complete pooling model, group structure is ignored and all $\sum_{i = 1}^n m_i$ observations are treated as IID
+In the complete pooling model, group structure is ignored and all observations are treated as IID
 \begin{align}
 y_{ij} \sim \mathcal{N}(\mu, \sigma), \\
 (\mu, \sigma) \sim p(\mu, \sigma).
@@ -290,8 +293,21 @@ y_{ij} &\sim \mathcal{N}(\mu_i, \sigma), \\
 \sigma &\sim p(\sigma),
 \end{align}
 where the vector $\mathbf{u} = (u_1, \ldots, u_n)$.
+The parameter $\beta$ applies to all groups, and each group is differentiated by a specific value of $u_i$.
+When inference is performed for the partial pooling model, the extent to which information is shared between groups is learnt rather than fixed at the outset, as with the complete or no pooling models.
 
-### Mixed effects models
+Bayesian hierarchical or multilevel models allow control over whether and how information is shared across groups.
+In a three-stage hierarchical model, the parameters are partitioned such that $\boldsymbol{\mathbf{\phi}} = (\mathbf{x}, \boldsymbol{\mathbf{\theta}})$.
+The model for data $\mathbf{y}$ is then
+\begin{align}
+\mathbf{y} &\sim p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}), \\
+\mathbf{x} &\sim p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}), \\
+\boldsymbol{\mathbf{\theta}} &\sim p(\boldsymbol{\mathbf{\theta}}),
+\end{align}
+with posterior distribution proportional to $p(\mathbf{x}, \boldsymbol{\mathbf{\theta}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \mathbf{x}, \boldsymbol{\mathbf{\theta}}) p(\mathbf{x} \, | \, \boldsymbol{\mathbf{\theta}}) p(\boldsymbol{\mathbf{\theta}})$.
+I refer to $\mathbf{x} = (x_1, \ldots, x_n)$ as the latent field, and $\boldsymbol{\mathbf{\theta}} = (\theta_1, \ldots, \theta_m)$ as the hyperparameters.
+
+### Generalised linear mixed effects model
 
 Fixed effects refer to those elements of the latent field which are constant across groups.
 Random effects refer to those elements of the latent field which vary across groups.
@@ -307,9 +323,9 @@ Random effects can also be structured to share information between some groups m
 In spatio-temporal statistics, structured spatial and temporal random effects are often used to impose smoothness.
 Spatial random effects are the subject of Chapter \@ref(beyond-borders).
 
-Give equation for a generalised linear mixed model (GLMM) here (may want to introduce GLMs first).
+Give equation for a generalised linear mixed model (GLMM) here.
 
-### Latent Gaussian models
+### Latent Gaussian model
 
 Latent Gaussian models [LGMs; @rue2009approximate] are a class of three-stage Bayesian hierarchical models in which the middle layer is Gaussian.
 To be more precise, in an LGM, the likelihood is given by
@@ -325,7 +341,7 @@ The structured additive predictor $\eta_i$ may include an intercept $\beta_0$, f
 The parameters $\beta_0$, $\{\beta_j\}$, $\{u_k(\cdot)\}$ are each assigned Gaussian prior distributions, and can be collected into a vector $\mathbf{x} \in \mathbb{R}^N$ such that $\mathbf{x} \sim \mathcal{N}(\mathbf{0}, \mathbf{Q}(\boldsymbol{\mathbf{\theta}}_2)^{-1})$ where $\boldsymbol{\mathbf{\theta}}_2 \in \mathbb{R}^{s_2}$ are further hyperparameters, again with $s_2$ assumed small.
 Let $\boldsymbol{\mathbf{\theta}} = (\boldsymbol{\mathbf{\theta}}_1, \boldsymbol{\mathbf{\theta}}_2) \in \mathbb{R}^m$ with $m = s_1 + s_2$ be all hyperparameters, with prior distribution $p(\boldsymbol{\mathbf{\theta}})$.
 
-### Extended latent Gaussian models
+### Extended latent Gaussian model
 
 Extended latent Gaussian models [ELGMs; @stringer2021fast] facilitate modelling of data with greater non-linearities than an LGM.
 In an ELGM, the structured additive predictor is redefined as $\boldsymbol{\mathbf{\eta}} = (\eta_1, \ldots \eta_{N_n})$, where $N_n \in \mathbb{N}$ is a function of $n$, and it is possible that $N_n \neq n$.
