--- a/docs/main.tex
+++ b/docs/main.tex
@@ -1432,10 +1432,9 @@ Of the respondents, 103,063 were aged 15-19 years, 92,173 were aged 20-24 years,
 The median number of surveys per country was four, ranging from one in Botswana and South Africa to six in Uganda.
 
 For each survey, I classified respondents into one of four behavioural risk groups \(k = 1, 2, 3, 4\) according to reported sexual risk behaviour in the past 12 months (Figure \ref{fig:category-flowchart}).
-In decreasing order of HIV acquisition risk, these risk groups were:
+In increasing order of HIV acquisition risk, these risk groups were:
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
+\begin{itemize}
 \tightlist
 \item
   \(k = 1\): Not sexually active
@@ -1445,16 +1444,16 @@ In decreasing order of HIV acquisition risk, these risk groups were:
   \(k = 3\): Non-regular or multiple sexual partner(s), and
 \item
   \(k = 4\): Reporting transactional sex.
-\end{enumerate}
+\end{itemize}
 
-The HIV incidence rate ratio was assumed to vary by risk group (Table \ref{tab:risk-groups}).
-In the case of inconsistent responses, women were categorised according to the highest risk group they fell into, ensuring that the categories were mutually exclusive.
+The HIV incidence rate ratio \(\text{RR}_k\) was assumed to vary by risk group (Table \ref{tab:risk-groups}), with the one cohabiting partner risk group as baseline.
 
 Exact survey questions varied slightly across survey types and between survey phases.
 Questions captured information about whether the respondent had been sexually active in the past twelve months, and if so how with many partners.
 For their three most recent partners, respondents were also asked about the type of partnership.
 Possible partnership types included spouse, cohabiting partner, partner not cohabiting with respondent, friend, sex worker, sex work client, and other.
 Full survey questions used are provided in Appendix \ref{survey-questions}.
+In the case of inconsistent responses, women were categorised according to the highest risk group they fell into, ensuring that the categories were mutually exclusive.
 
 Some surveys included a specific question asking if the respondent had received or given money or gifts for sex in the past twelve months.
 In these surveys, 2.64\% of women reported transactional sex.
@@ -1502,21 +1501,21 @@ Let \(p_{itak} > 0\) with \(\sum_{k = 1}^{3^{+}} p_{itak} = 1\), be the probabil
 
 A standard multinomial logistic regression model \autocite[e.g.][]{gelman2013bayesian} is specified by
 \begin{align}
-    \mathbf{y}_{ita} &= (y_{ita1}, \ldots, y_{ita3^{+}})^\top \sim \text{Multinomial}(m_{ita}; \, p_{ita1}, \ldots, p_{ita3^{+}}), \\
-    \log \left( \frac{p_{itak}}{p_{ita1}} \right) &= \eta_{itak}, \quad k = 2, 3^{+},
+    \mathbf{y}_{ita} &= (y_{ita1}, \ldots, y_{ita3^{+}})^\top \sim \text{Multinomial}(m_{ita}; \, p_{ita1}, \ldots, p_{ita3^{+}}), \label{eq:mlr1} \\
+    \log \left( \frac{p_{itak}}{p_{ita1}} \right) &= \eta_{itak}, \quad k = 2, 3^{+}, \label{eq:mlr2}
 \end{align}
 where the number in risk group \(k\) is \(y_{itak}\), the fixed sample size is \(m_{ita} = \sum_{k = 1}^{3^{+}} y_{itak}\), and \(k = 1\) is chosen as the baseline category.
 This model is not an LGM because each observation \(y_{itak}\) for \(k \in \{1, 2, 3^{+}\}\) depends on multiple structured additive predictors \(\{\eta_{itak}, k = 1, 2, 3^{+}\}\).
 
-To recast this model as an LGM, I used the multinomial-Poisson transformation.
-This modification allowed inference to be performed using the INLA \autocite{rue2009approximate} algorithm via the \texttt{R-INLA} package \autocite{martins2013bayesian}.
 The model, defined over 940 districts, 20 years, 3 age groups, and 3 risk groups, is too large for MCMC to be tractable in reasonable time.
+To recast this model as an LGM, I used the multinomial-Poisson transformation (detailed in Section \ref{mp-transformation}).
+This modification allowed inference to be performed using the INLA \autocite{rue2009approximate} algorithm via the \texttt{R-INLA} package \autocite{martins2013bayesian}.
 Inferences from INLA in the LGM setting are accurate and substantially faster than MCMC.
 
-\hypertarget{the-multinomial-poisson-transformation}{%
-\subsubsection{The multinomial-Poisson transformation}\label{the-multinomial-poisson-transformation}}
+\hypertarget{mp-transformation}{%
+\subsubsection{The multinomial-Poisson transformation}\label{mp-transformation}}
 
-The multinomial-Poisson transformation \autocite{baker1994multinomial} reframes a given multinomial logistic regression model as an equivalent Poisson log-linear model.
+The multinomial-Poisson transformation \autocite{baker1994multinomial} reframes a given multinomial logistic regression model, like that described in Equations \eqref{eq:mlr1} and \eqref{eq:mlr2}, as an equivalent Poisson log-linear model.
 The equivalent model is of the form
 \begin{align}
     y_{itak} &\sim \text{Poisson}(\kappa_{itak}), \label{eq:poisson1} \\
@@ -1527,11 +1526,11 @@ The basis of the transformation is that conditional on their sum Poisson counts 
     \mathbf{y}_{ita} \, | \, m_{ita} \sim \text{Multinomial} \left( m_{ita}; \frac{\kappa_{ita1}}{\kappa_{ita}}, \ldots, \frac{\kappa_{ita3^{+}}}{\kappa_{ita}} \right), \label{eq:multi}
 \end{equation}
 where \(\kappa_{ita} = \sum_{k = 1}^{3^{+}} \kappa_{itak}\).
-Category probabilities may then be obtained using the softmax function
+The probabilities \(p_{itak}\) may then be obtained using the softmax function
 \begin{equation}
     p_{itak} = \frac{\exp(\eta_{itak})}{\sum_{k = 1}^{3^{+}} \exp(\eta_{itak})} = \frac{\kappa_{itak}}{\sum_{k = 1}^{3^{+}} \kappa_{itak}} = \frac{\kappa_{itak}}{\kappa_{ita}}.
 \end{equation}
-Under the equivalent model, the sample sizes \(m_{ita}\) are treated as random rather than fixed such that
+Under the equivalent model, in Equation \eqref{eq:poisson1} the sample sizes \(m_{ita}\) are treated as random rather than fixed such that
 \begin{equation}
 m_{ita} = \sum_k y_{itak} \sim \text{Poisson} \left( \sum_k \kappa_{itak} \right) = \text{Poisson} \left( \kappa_{ita} \right). \label{eq:mpoisson}
 \end{equation}
@@ -1545,6 +1544,7 @@ As expected, Equation \eqref{eq:prodpoisson} corresponds to the product of indep
 This exercise demonstrates that the Poisson log-linear model contains within it a multinomial likelihood, with a Poission prior on the sample size.
 
 For this model to be equivalent to a multinomial logistic regression model, the normalisation constants \(m_{ita}\) must be recovered exactly.
+That is to say, their posterior distributions should be as close as possible to a Dirac delta distribution with value zero everywhere but the known value of the sample size.
 To ensure that this is the case, observation-specific random effects \(\theta_{ita}\) can be included in the equation for the linear predictor.
 Multiplying each of \(\{\kappa_{itak}\}_{k = 1}^{3^+}\) by \(\exp(\theta_{ita})\) has no effect on the category probabilities, but does provide the necessary flexibility for \(\kappa_{ita}\) to recover \(m_{ita}\) exactly.
 Although in theory an improper prior distribution \(\theta_{ita} \propto 1\) should be used, I found that in practice, by keeping \(\eta_{ita}\) otherwise small using appropriate constraints, so that arbitrarily large values of \(\theta_{ita}\) are not required, it is sufficient (and practically preferable for inference) to instead use a vague prior distribution.
@@ -1605,10 +1605,13 @@ I considered four models (Table \ref{tab:multinomial-models}) for \(\eta_{ita}\)
 Observation random effects \(\theta_{ita} \sim \mathcal{N}(0, 1000^2)\) with a vague prior distribution were included in all models I considered to ensure the multinomial-Poisson transformation was valid.
 To capture country-specific proportion estimates for each category, I included category random effects \(\beta_k \sim \mathcal{N}(0, \tau_\beta^{-1})\) and country-category random effects \(\zeta_{ck} \sim \mathcal{N}(0, \tau_\zeta^{-1})\).
 Heterogeneity in risk group proportions by age was allowed by including age-country-category random effects \(\alpha_{ack} \sim \mathcal{N}(0, \tau_\alpha^{-1})\).
-I considered several specifications for the remaining spatial and temporal effects.
+I considered several specifications for the space-cateogry \(u_{ik}\) and time-cateogry effects \(\gamma_{tk}\), described in Sections \ref{spatial-re} and \ref{temporal-re}.
 
-\hypertarget{spatial-random-effects}{%
-\paragraph{Spatial random effects}\label{spatial-random-effects}}
+Use of the multinomial-Poisson transformation required all random effects to include interaction with category \(k\), because any random effects which did not include interaction with category would give no change in category probabilities.
+The only exception were the observation random effects, which were included as a device to ensure the transformation is valid, rather than to model the data.
+
+\hypertarget{spatial-re}{%
+\paragraph{Spatial random effects}\label{spatial-re}}
 
 For the space-category random effects \(u_{ik}\) I considered two specifications:
 
@@ -1633,8 +1636,8 @@ I also tested using the BYM2 model \autocite{simpson2017penalising} in place of 
 I found that the proportion parameter posteriors tended to be highly peaked at the value one.
 For simplicity and to avoid numerical issues, by using Besag random effects I effectively decided to fix this proportion to one.
 
-\hypertarget{temporal-random-effects}{%
-\paragraph{Temporal random effects}\label{temporal-random-effects}}
+\hypertarget{temporal-re}{%
+\paragraph{Temporal random effects}\label{temporal-re}}
 
 For the time-category random effects \(\gamma_{tk}\) I considered two specifications:
 
